# Assignment-Feedback-Agent

./: README.md  agent_prompt.md  run_tests.ps1  sample_rubric.json  start-dev.ps1  testcases.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: coordinator.py  ingestion_agent.py  nlp_agent.py  report_agent.py  rubric_agent.py
backend/app/api/: feedback.py  mcp_bridge.py  rubric.py  upload.py
backend/app/core/: config.py
backend/app/mcp/: orchestrator.py  protocol_server.py  server.py  session_store.py  tools.py
backend/app/models/: feedback.py  mcp.py  rubric.py
backend/app/utils/: file_parser.py  groq_client.py  storage.py
backend/tests/: test_all_cases.py  test_api_health.py  test_api_mcp_bridge.py  test_file_parser.py  test_mcp_conversation_memory.py  test_orchestrator_assistant_message.py  test_pipeline_shapes.py
frontend/my-react-app/: package-lock.json
frontend/my-react-app/src/: App.css  App.tsx  index.css
frontend/my-react-app/src/api/: client.ts
frontend/my-react-app/src/components/: ChatbotPanel.tsx  FeedbackReport.tsx  LoadingState.tsx  RubricBuilder.tsx  ScoreCard.tsx  UploadForm.tsx
frontend/my-react-app/src/types/: feedback.ts
